Propagate definite height of single-line row flexboxes to child cross size

When we have a single-line definite height row flexbox with a column
flexbox as its child, we always relayout all children of the column
flexbox during LayoutLineItems with a zero-sized height being set.
This patch leverages the definite height of the row flexbox in order to
avoid a relayout of the column flexbox children.

Bug: 703512
Change-Id: I1f67efff3ebc67cdcce57dce2d2567e2abe13625
Reviewed-on: https://chromium-review.googlesource.com/c/1306404
Reviewed-by: Christian Biesinger <cbiesinger@chromium.org>
Commit-Queue: Andrew Comminos <acomminos@fb.com>
Cr-Commit-Position: refs/heads/master@{#607090}
Former-commit-id: 1e933299c93a4d64e672e26c7ecf53c16df605c5